crates/tui/src/snapshots/savfox_tui__model_migration__tests__model_migration_prompt.snap
---
source: crates/tui/src/model_migration.rs
expression: terminal.backend()
---

> Savfox just got an upgrade. Introducing gpt-5.1-savfox-max

  Upgrade for the latest and greatest agentic coding model.

  You can continue using gpt-5.1-savfox-mini if you prefer.

  Choose how you'd like Savfox to proceed.

› 1. Try new model
  2. Use existing model

  Use ↑/↓ to move, press enter to confirm
