crates/tui/src/snapshots/savfox_tui__model_migration__tests__model_migration_prompt_gpt5_codex.snap
---
source: tui/src/model_migration.rs
expression: terminal.backend()
---

> Savfox just got an upgrade. Introducing gpt-5.1-savfox-max.

  We recommend switching from gpt-5-savfox to
  gpt-5.1-savfox-max.

  Savfox-optimized flagship for deep and fast reasoning.
  Learn more about gpt-5.1-savfox-max at
  https://www.savfox.com/models/gpt-5.1-savfox-max

  Press enter to continue
