crates/tui/src/snapshots/savfox_tui__model_migration__tests__model_migration_prompt_gpt5_savfox_mini.snap
---
source: crates/tui/src/model_migration.rs
expression: terminal.backend()
---

> Savfox just got an upgrade. Introducing gpt-5.1-savfox-min

  We recommend switching from gpt-5-savfox-mini to
  gpt-5.1-savfox-mini.

  Optimized for savfox. Cheaper, faster, but less capable.
  Learn more about gpt-5.1-savfox-mini at
  https://www.savfox.com/models/gpt-5.1-savfox-mini

  Press enter to continue
